# equity-returns-test

./: README.md  main.py  nasdaqtraded.txt  pyproject.toml
