[project]
name = "polars-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "polars>=1.10.0",
    "pyarrow>=17.0.0",
    "ruff>=0.7.0",
    "yahooquery>=2.3.7",
    "yfinance>=0.2.44",
]
